--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
 		"@fortawesome/free-solid-svg-icons": "^6.7.2",
 		"@fortawesome/react-fontawesome": "^0.2.2",
 		"@tailwindcss/vite": "^4.0.0",
+		"framer-motion": "^12.0.6",
 		"react": "^18.3.1",
 		"react-dom": "^18.3.1",
 		"react-icons": "^5.4.0",
