--- a/package.json
+++ b/package.json
@@ -1,13 +1,17 @@
 {
-	"name": "silverleafindus",
+	"name": "silverleaf-indus",
 	"private": true,
-	"version": "0.0.0",
+	"version": "1.0.0",
+	"description": "Server for SilverLeaf Indus project",
+	"main": "src/index.js",
 	"type": "module",
 	"scripts": {
-		"dev": "vite",
+		"start": "node src/index.js",
+		"dev": "nodemon src/index.js",
 		"build": "vite build",
 		"lint": "eslint .",
-		"preview": "vite preview"
+		"preview": "vite preview",
+		"test": "jest"
 	},
 	"dependencies": {
 		"@auth0/auth0-react": "^2.3.0",
@@ -16,13 +20,17 @@
 		"@fortawesome/free-solid-svg-icons": "^6.7.2",
 		"@fortawesome/react-fontawesome": "^0.2.2",
 		"@tailwindcss/vite": "^4.0.0",
+		"cors": "^2.8.5",
+		"express": "^4.18.2",
 		"framer-motion": "^12.0.6",
 		"lucide-react": "^0.474.0",
+		"mongoose": "^7.5.0",
 		"react": "^18.3.1",
 		"react-dom": "^18.3.1",
 		"react-icons": "^5.4.0",
 		"react-router-dom": "^7.1.3",
-		"tailwindcss": "^4.0.0"
+		"tailwindcss": "^4.0.0",
+		"dotenv": "^16.3.1"
 	},
 	"devDependencies": {
 		"@eslint/js": "^9.17.0",
@@ -34,6 +42,13 @@
 		"eslint-plugin-react-hooks": "^5.0.0",
 		"eslint-plugin-react-refresh": "^0.4.16",
 		"globals": "^15.14.0",
-		"vite": "^6.0.5"
-	}
+		"vite": "^6.0.5",
+		"nodemon": "^3.0.1",
+		"jest": "^29.6.4"
+	},
+	"engines": {
+		"node": ">=14.0.0"
+	},
+	"author": "",
+	"license": "ISC"
 }
