--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
 		"@fortawesome/free-solid-svg-icons": "^6.7.2",
 		"@fortawesome/react-fontawesome": "^0.2.2",
 		"@tailwindcss/vite": "^4.0.0",
+		"@vercel/analytics": "^1.4.1",
 		"cors": "^2.8.5",
+		"dotenv": "^16.3.1",
 		"express": "^4.18.2",
 		"framer-motion": "^12.0.6",
 		"lucide-react": "^0.474.0",
@@ -28,8 +30,7 @@
 		"react-dom": "^18.3.1",
 		"react-icons": "^5.4.0",
 		"react-router-dom": "^7.1.3",
-		"tailwindcss": "^4.0.0",
-		"dotenv": "^16.3.1"
+		"tailwindcss": "^4.0.0"
 	},
 	"devDependencies": {
 		"@eslint/js": "^9.17.0",
@@ -41,9 +42,9 @@
 		"eslint-plugin-react-hooks": "^5.0.0",
 		"eslint-plugin-react-refresh": "^0.4.16",
 		"globals": "^15.14.0",
-		"vite": "^6.0.5",
+		"jest": "^29.6.4",
 		"nodemon": "^3.0.1",
-		"jest": "^29.6.4"
+		"vite": "^6.0.5"
 	},
 	"engines": {
 		"node": ">=14.0.0"
